<resources>
    <string name="app_name">Al-Maathuraat</string>
    <string name="tasbeeh">Tasbeeh</string>
    <string name="khamsoon">Khamsoon</string>
    <string name="al_maathuraat">Al Maathuraat</string>
    <string name="subhah_icon_content_desc">Subhah Card</string>
    <string name="subhah">Subhah</string>
    <string name="khamsoon_icon_content_desc">Khamsoon Card</string>
    <string name="header_home">بسم الله الرحمن الرحيم</string>
    <string name="header_en">In the name of Allah, the Benevolent, the Merciful</string>
    <string name="clear_button">clear button</string>
    <string name="add_button">add button</string>
    <string name="zero">0</string>
    <string name="others">Others</string>
</resources>