<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:fillViewport="true"
    tools:context=".ui.HomeActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/base_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/standard">

        <TextView
            android:id="@+id/header_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/standard"
            android:fontFamily="@font/ruqaa"
            android:gravity="center"
            android:text="@string/header_home"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="40sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/header_en"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/standard"
            android:background="@color/white"
            android:fontFamily="@font/montserrat_regular"
            android:gravity="center"
            android:padding="@dimen/standard"
            android:text="@string/header_en"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/card_group_constraint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/header_main"
            app:layout_constraintVertical_bias="0.25" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/card_group_constraint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/maathuraaat_card"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/small"
                app:cardBackgroundColor="@color/card_color"
                app:cardCornerRadius="@dimen/card_radius"
                app:layout_constraintEnd_toStartOf="@+id/guideline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/card_group_constraint"
                app:strokeColor="@color/materialCardViewStrokeColour"
                app:strokeWidth="@dimen/stroke_width">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/small"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/home_icon_height"
                        android:layout_gravity="center"
                        android:contentDescription="@string/al_maathuraat"
                        android:padding="16dp"
                        android:src="@drawable/ic_praying_mat" />

                    <TextView
                        android:id="@+id/maathuraat_ar_textview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="المأثورات"
                        android:textStyle="bold"
                        android:visibility="gone" />

                    <TextView
                        android:id="@+id/maathuraat_textview"
                        style="@style/HomeScreenText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="@dimen/small"
                        android:text="@string/al_maathuraat" />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/khamsoon_card"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/small"
                app:cardBackgroundColor="@color/card_color"
                app:cardCornerRadius="@dimen/card_radius"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/guideline"
                app:layout_constraintTop_toTopOf="@id/card_group_constraint"
                app:strokeColor="@color/materialCardViewStrokeColour"
                app:strokeWidth="@dimen/stroke_width">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/small"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/home_icon_height"
                        android:layout_gravity="center"
                        android:contentDescription="@string/khamsoon_icon_content_desc"
                        android:padding="16dp"
                        android:src="@drawable/ic_dua_hands" />

                    <TextView
                        android:id="@+id/_textview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="خمسون"
                        android:textStyle="bold"
                        android:visibility="gone" />

                    <TextView
                        android:id="@+id/khamsoon_textview"
                        style="@style/HomeScreenText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="@dimen/small"
                        android:text="@string/khamsoon" />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/subhah_card"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/standard"
                android:layout_marginEnd="@dimen/small"
                app:cardBackgroundColor="@color/card_color"
                app:cardCornerRadius="@dimen/card_radius"
                app:layout_constraintEnd_toStartOf="@+id/guideline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/maathuraaat_card"
                app:strokeColor="@color/materialCardViewStrokeColour"
                app:strokeWidth="@dimen/stroke_width">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/small"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/home_icon_height"
                        android:layout_gravity="center"
                        android:contentDescription="@string/subhah_icon_content_desc"
                        android:padding="16dp"
                        android:src="@drawable/ic_muslim_tasbih" />

                    <TextView
                        android:id="@+id/subhah_textview"
                        style="@style/HomeScreenText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="@dimen/small"
                        android:text="@string/subhah" />
                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/Quraan_card"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/small"
                android:layout_marginTop="@dimen/standard"
                app:cardBackgroundColor="@color/card_color"
                app:cardCornerRadius="@dimen/card_radius"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toBottomOf="@+id/khamsoon_card"
                app:strokeColor="@color/materialCardViewStrokeColour"
                app:strokeWidth="@dimen/stroke_width">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/small"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/home_icon_height"
                        android:layout_gravity="center"
                        android:contentDescription="@string/tasbeeh"
                        android:padding="16dp"
                        android:src="@drawable/ic_reading_quran" />

                    <TextView
                        android:id="@+id/textView6"
                        style="@style/HomeScreenText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="@dimen/small"
                        android:text="@string/others" />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <View
                android:layout_width="match_parent"
                android:layout_height="64dp"
                app:layout_constraintBottom_toBottomOf="@id/card_group_constraint"
                app:layout_constraintEnd_toEndOf="@id/card_group_constraint"
                app:layout_constraintStart_toStartOf="@id/card_group_constraint"
                app:layout_constraintTop_toBottomOf="@id/subhah_card" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
